tests/errors/test_62.x
// Imported file already imported

import "standard.x" as Math;
import "standard.x" as Math2;

fn main() -> int { return 0; }